--- a/index.html
+++ b/index.html
@@ -22,52 +22,54 @@
         </a>
     </header>
 
-    <main>
-        <a href="./pages/la_note_enchantee.html" class="card menus__box menus--la-note-enchantee">
-            <div class="menus__box-content">
-                <img class="icon-music" src="assets/image/music.svg" alt="music note" />
-                <h2>La note enchantée</h2>
-                <p>MENU</p>
-            </div>
-        </a>
+    <div class="bloc-page">
+        <main>
+            <a href="./pages/la_note_enchantee.html" class="card menus__box menus--la-note-enchantee">
+                <div class="menus__box-content">
+                    <img class="icon-music" src="assets/image/music.svg" alt="music note" />
+                    <h2>La note enchantée</h2>
+                    <p>MENU</p>
+                </div>
+            </a>
 
-        <a href="./pages/le_chic_a_la_francaise.html" class="card menus__box menus--le-chic-a-la-francaise">
-            <div class="menus__box-content">
-                <h2 id="chic-title">Le chic à la française</h2>
-                <p>Menu</p>
-            </div>
-        </a>
+            <a href="./pages/le_chic_a_la_francaise.html" class="card menus__box menus--le-chic-a-la-francaise">
+                <div class="menus__box-content">
+                    <h2 id="chic-title">Le chic à la française</h2>
+                    <p>Menu</p>
+                </div>
+            </a>
 
-        <a href="./pages/le_delice_des_papilles.html" class="card menus__box menus--le-delice-des-papilles">
-            <div class="menus__box-content">
-                <h2>Le délice des papilles</h2>
-                <p>Menu</p>
-            </div>
-        </a>
+            <a href="./pages/le_delice_des_papilles.html" class="card menus__box menus--le-delice-des-papilles">
+                <div class="menus__box-content">
+                    <h2>Le délice des papilles</h2>
+                    <p>Menu</p>
+                </div>
+            </a>
 
-        <a href="./pages/la_palette_du_gout.html" class="card menus__box menus--la-palette-du-gout">
-            <div class="menus__box-content">
-                <h2>La palette du goût</h2>
-                <p>Menu</p>
-            </div>
-        </a>
-    </main>
+            <a href="./pages/la_palette_du_gout.html" class="card menus__box menus--la-palette-du-gout">
+                <div class="menus__box-content">
+                    <h2>La palette du goût</h2>
+                    <p>Menu</p>
+                </div>
+            </a>
+        </main>
 
-    <div class="soon-btn">
-        <div class="btn">
-            <span>Prochainement</span>
-            <span class="dot">.</span>
-            <span class="dot">.</span>
-            <span class="dot">.</span>
+        <div class="soon-btn">
+            <div class="btn">
+                <span>Prochainement</span>
+                <span class="dot">.</span>
+                <span class="dot">.</span>
+                <span class="dot">.</span>
+            </div>
         </div>
     </div>
 
     <footer>
-        <a href="./pages/mentions_legales.html" class="legal-notice">
+        <a href="./pages/mentions_legales.html">
             Mentions légales
         </a>
 
-        <a href="mailto:marieparet.33@gmail.com" class="contact-us">
+        <a href="mailto:marieparet.33@gmail.com">
             Contactez-nous
         </a>
     </footer>
