--- a/pages/la_palette_du_gout.html
+++ b/pages/la_palette_du_gout.html
@@ -21,101 +21,103 @@
     </a>
   </header>
 
-  <div class="menu__header">
-    <h1>La palette du gôut</h1>
-  </div>
-
-  <main class="menu--main">
-    <div class="menu__container menu--la-palette-du-gout">
-      <div class="menu__top">
-        <h2>La palette du gôut</h2>
-      </div>
-
-      <div class="menu__content">
-
-        <div class="menu__content--color-green">
-          <h3>
-            <img class="line-menu-1" src="../assets/image/line_menu_4.svg" alt="ligne menu" />
-            <span class="underline menu__content--color-black">Esquisse</span>
-            <img class="line-menu-1" src="../assets/image/line_menu_4.svg" alt="ligne menu" />
-          </h3>
-        </div>
-
-        <p>
-          <span>Fricassée d'escargot au piment d'espelette</span>
-          <span class="price">60€</span>
-        </p>
-        <p>
-          <span>Oeuf au plat assaisonné à la truffe sur lit de caviar</span>
-          <span class="price">55€</span>
-        </p>
-        <p>
-          <span>Foie gras de canard mi-cuit et ses copeaux de truffe noire</span>
-          <span class="price">65€</span>
-        </p>
-
-        <div class="menu__content--color-green">
-          <h3>
-            <img class="line-menu-1" src="../assets/image/line_menu_4.svg" alt="ligne menu" />
-            <span class="underline menu__content--color-black">Oeuvre de maître</span>
-            <img class="line-menu-1" src="../assets/image/line_menu_4.svg" alt="ligne menu" />
-          </h3>
-        </div>
-
-        <p>
-          <span>Filet de boeuf aux herbes accompagné de sa ribambelle de légumes</span>
-          <span class="price">70€</span>
-        </p>
-        <p>
-          <span>Parmentier de queue de boeuf à la truffe noire sur sa purée de panais</span>
-          <span class="price">85€</span>
-        </p>
-        <p>
-          <span>Filet de Turbot aux agrumes</span>
-          <span class="price">125€</span>
-        </p>
-
-        <div class="menu__content--color-green">
-          <h3>
-            <img class="line-menu-1" src="../assets/image/line_menu_4.svg" alt="ligne menu" />
-            <span class="underline menu__content--color-black">Au sommet de l'art</span>
-            <img class="line-menu-1" src="../assets/image/line_menu_4.svg" alt="ligne menu" />
-          </h3>
-        </div>
-
-        <p>
-          <span>Paris-Brest revisité</span>
-          <span class="price">55€</span>
-        </p>
-        <p>
-          <span>Macaron au chocolat d'exception et glace à la vanille de Madagascar</span>
-          <span class="price">65€</span>
-        </p>
-        <p>
-          <span>Mousse au chocolat au piment d'espelette et à la truffe noire</span>
-          <span class="price">60€</span>
-        </p>
-      </div>
-
-
-      <div class="menu__footer">
-      </div>
+  <div class="bloc-page">
+    <div class="menu__header">
+      <h2>La palette du gôut</h2>
     </div>
 
-  </main>
+    <main class="menu--main">
+      <div class="menu__container menu--la-palette-du-gout">
+        <div class="menu__top">
+          <h3>La palette du gôut</h3>
+        </div>
 
-  <div class="return-btn">
-    <div class="btn">
-      <a href="../index.html">Accueil</a>
+        <div class="menu__content">
+
+          <div class="menu__content--color-green">
+            <h4>
+              <img class="line-menu-1" src="../assets/image/line_menu_4.svg" alt="ligne menu" />
+              <span class="underline menu__content--color-black">Esquisse</span>
+              <img class="line-menu-1" src="../assets/image/line_menu_4.svg" alt="ligne menu" />
+            </h4>
+          </div>
+
+          <p>
+            <span>Fricassée d'escargot au piment d'espelette</span>
+            <span class="price">60€</span>
+          </p>
+          <p>
+            <span>Oeuf au plat assaisonné à la truffe sur lit de caviar</span>
+            <span class="price">55€</span>
+          </p>
+          <p>
+            <span>Foie gras de canard mi-cuit et ses copeaux de truffe noire</span>
+            <span class="price">65€</span>
+          </p>
+
+          <div class="menu__content--color-green">
+            <h4>
+              <img class="line-menu-1" src="../assets/image/line_menu_4.svg" alt="ligne menu" />
+              <span class="underline menu__content--color-black">Oeuvre de maître</span>
+              <img class="line-menu-1" src="../assets/image/line_menu_4.svg" alt="ligne menu" />
+            </h4>
+          </div>
+
+          <p>
+            <span>Filet de boeuf aux herbes accompagné de sa ribambelle de légumes</span>
+            <span class="price">70€</span>
+          </p>
+          <p>
+            <span>Parmentier de queue de boeuf à la truffe noire sur sa purée de panais</span>
+            <span class="price">85€</span>
+          </p>
+          <p>
+            <span>Filet de Turbot aux agrumes</span>
+            <span class="price">125€</span>
+          </p>
+
+          <div class="menu__content--color-green">
+            <h4>
+              <img class="line-menu-1" src="../assets/image/line_menu_4.svg" alt="ligne menu" />
+              <span class="underline menu__content--color-black">Au sommet de l'art</span>
+              <img class="line-menu-1" src="../assets/image/line_menu_4.svg" alt="ligne menu" />
+            </h4>
+          </div>
+
+          <p>
+            <span>Paris-Brest revisité</span>
+            <span class="price">55€</span>
+          </p>
+          <p>
+            <span>Macaron au chocolat d'exception et glace à la vanille de Madagascar</span>
+            <span class="price">65€</span>
+          </p>
+          <p>
+            <span>Mousse au chocolat au piment d'espelette et à la truffe noire</span>
+            <span class="price">60€</span>
+          </p>
+        </div>
+
+
+        <div class="menu__footer">
+        </div>
+      </div>
+
+    </main>
+
+    <div class="return-btn">
+      <div class="btn">
+        <a href="../index.html">Accueil</a>
+      </div>
     </div>
   </div>
 
   <footer>
-    <a href="./mentions_legales.html" class="legal-notice">
+    <a href="./mentions_legales.html">
       Mentions légales
     </a>
 
-    <a href="mailto:marieparet.33@gmail.com" class="contact-us">
+    <a href="mailto:marieparet.33@gmail.com">
       Contactez-nous
     </a>
   </footer>
