--- a/pages/le_delice_des_papilles.html
+++ b/pages/le_delice_des_papilles.html
@@ -21,136 +21,138 @@
         </a>
     </header>
 
-    <div class="menu__header">
-        <h1>Le délice des papilles</h1>
-    </div>
-
-    <main class="menu--main">
-        <div class="menu__container menu--le-delice-des-papilles">
-            <div class="menu__top">
-                <h2>Le délice des papilles</h2>
-            </div>
-
-            <div class="menu__content">
-
-                <div class="menu__content--color-dark-blue">
-                    <h3>
-                        <svg class="line-menu-3" version="1.1" xmlns="http://www.w3.org/2000/svg"
-                            xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="346px" height="18px"
-                            viewBox="0 0 346 18" style="enable-background:new 0 0 346 18;" xml:space="preserve">
-                            <path d="M2,2.311c0,0,2.666,13.333,21.333,13.833S344.5,16.311,344.5,16.311s-1.834-1.058-3.5-6.946
-	                    L27.166,8.644C27.166,8.644,14.833,9.977,2,2.311z" />
-                        </svg>
-
-                        <span class="underline menu__content--color-black">Pour bien commencer</span>
-
-                        <svg class="line-menu-3" version="1.1" xmlns="http://www.w3.org/2000/svg"
-                            xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="349.479px"
-                            height="20.312px" viewBox="0 0 349.479 20.312"
-                            style="enable-background:new 0 0 349.479 20.312;" xml:space="preserve">
-                            <path d="M346.754,3.873c0,0-2.678,13.333-21.436,13.833S2.589,17.873,2.589,17.873s1.843-1.058,3.517-6.946
-	                    l315.359-0.721C321.465,10.207,333.859,11.54,346.754,3.873z" />
-                        </svg>
-                    </h3>
-                </div>
-                <p>
-                    <span>Tartare de thon assaisonné au yuzu</span>
-                    <span class="price">55€</span>
-                </p>
-                <p>
-                    <span>Bouchée de homard croustillant et sa farandole de petits légumes</span>
-                    <span class="price">89€</span>
-                </p>
-                <p>
-                    <span>Velouté de cèpes aux truffes</span>
-                    <span class="price">56€</span>
-                </p>
-
-                <div class="menu__content--color-medium-blue">
-                    <h3>
-                        <svg class="line-menu-3" version="1.1" xmlns="http://www.w3.org/2000/svg"
-                            xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="346px" height="18px"
-                            viewBox="0 0 346 18" style="enable-background:new 0 0 346 18;" xml:space="preserve">
-                            <path d="M2,2.311c0,0,2.666,13.333,21.333,13.833S344.5,16.311,344.5,16.311s-1.834-1.058-3.5-6.946
-	                    L27.166,8.644C27.166,8.644,14.833,9.977,2,2.311z" />
-                        </svg>
-
-                        <span class="underline menu__content--color-black">Pour bien continuer</span>
-
-                        <svg class="line-menu-3" version="1.1" xmlns="http://www.w3.org/2000/svg"
-                            xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="349.479px"
-                            height="20.312px" viewBox="0 0 349.479 20.312"
-                            style="enable-background:new 0 0 349.479 20.312;" xml:space="preserve">
-                            <path d="M346.754,3.873c0,0-2.678,13.333-21.436,13.833S2.589,17.873,2.589,17.873s1.843-1.058,3.517-6.946
-	                    l315.359-0.721C321.465,10.207,333.859,11.54,346.754,3.873z" />
-                        </svg>
-                    </h3>
-                </div>
-
-                <p>
-                    <span>Poulet rôti aux herbes de provence et sa crème de truffe</span>
-                    <span class="price">110€</span>
-                </p>
-                <p>
-                    <span>Langouste rôtie et ses légumes de saison</span>
-                    <span class="price">225€</span>
-                </p>
-                <p>
-                    <span>Côte de boeuf angus et sa purée de panais</span>
-                    <span class="price">115€</span>
-                </p>
-
-                <div class="menu__content--color-light-blue">
-                    <h3>
-                        <svg class="line-menu-3" version="1.1" xmlns="http://www.w3.org/2000/svg"
-                            xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="346px" height="18px"
-                            viewBox="0 0 346 18" style="enable-background:new 0 0 346 18;" xml:space="preserve">
-                            <path d="M2,2.311c0,0,2.666,13.333,21.333,13.833S344.5,16.311,344.5,16.311s-1.834-1.058-3.5-6.946
-	                    L27.166,8.644C27.166,8.644,14.833,9.977,2,2.311z" />
-                        </svg>
-
-                        <span class="underline menu__content--color-black">Pour bien terminer</span>
-
-                        <svg class="line-menu-3" version="1.1" xmlns="http://www.w3.org/2000/svg"
-                            xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="349.479px"
-                            height="20.312px" viewBox="0 0 349.479 20.312"
-                            style="enable-background:new 0 0 349.479 20.312;" xml:space="preserve">
-                            <path d="M346.754,3.873c0,0-2.678,13.333-21.436,13.833S2.589,17.873,2.589,17.873s1.843-1.058,3.517-6.946
-	                    l315.359-0.721C321.465,10.207,333.859,11.54,346.754,3.873z" />
-                        </svg>
-                    </h3>
-                </div>
-                <p>
-                    <span>Farandole de desserts du chef</span>
-                    <span class="price">55€</span>
-                </p>
-                <p>
-                    <span>Crème brulée revisitée</span>
-                    <span class="price">60€</span>
-                </p>
-                <p>
-                    <span>Tiramisu à la noisette</span>
-                    <span class="price">55€</span>
-                </p>
-            </div>
-
-            <div class="menu__footer">
-            </div>
+    <div class="bloc-page">
+        <div class="menu__header">
+            <h2>Le délice des papilles</h2>
         </div>
-    </main>
 
-    <div class="return-btn">
-        <div class="btn">
-            <a href="../index.html">Accueil</a>
+        <main class="menu--main">
+            <div class="menu__container menu--le-delice-des-papilles">
+                <div class="menu__top">
+                    <h3>Le délice des papilles</h3>
+                </div>
+
+                <div class="menu__content">
+
+                    <div class="menu__content--color-dark-blue">
+                        <h4>
+                            <svg class="line-menu-3" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="346px" height="18px"
+                                viewBox="0 0 346 18" style="enable-background:new 0 0 346 18;" xml:space="preserve">
+                                <path d="M2,2.311c0,0,2.666,13.333,21.333,13.833S344.5,16.311,344.5,16.311s-1.834-1.058-3.5-6.946
+	                    L27.166,8.644C27.166,8.644,14.833,9.977,2,2.311z" />
+                            </svg>
+
+                            <span class="underline menu__content--color-black">Pour bien commencer</span>
+
+                            <svg class="line-menu-3" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="349.479px"
+                                height="20.312px" viewBox="0 0 349.479 20.312"
+                                style="enable-background:new 0 0 349.479 20.312;" xml:space="preserve">
+                                <path d="M346.754,3.873c0,0-2.678,13.333-21.436,13.833S2.589,17.873,2.589,17.873s1.843-1.058,3.517-6.946
+	                    l315.359-0.721C321.465,10.207,333.859,11.54,346.754,3.873z" />
+                            </svg>
+                        </h4>
+                    </div>
+                    <p>
+                        <span>Tartare de thon assaisonné au yuzu</span>
+                        <span class="price">55€</span>
+                    </p>
+                    <p>
+                        <span>Bouchée de homard croustillant et sa farandole de petits légumes</span>
+                        <span class="price">89€</span>
+                    </p>
+                    <p>
+                        <span>Velouté de cèpes aux truffes</span>
+                        <span class="price">56€</span>
+                    </p>
+
+                    <div class="menu__content--color-medium-blue">
+                        <h4>
+                            <svg class="line-menu-3" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="346px" height="18px"
+                                viewBox="0 0 346 18" style="enable-background:new 0 0 346 18;" xml:space="preserve">
+                                <path d="M2,2.311c0,0,2.666,13.333,21.333,13.833S344.5,16.311,344.5,16.311s-1.834-1.058-3.5-6.946
+	                    L27.166,8.644C27.166,8.644,14.833,9.977,2,2.311z" />
+                            </svg>
+
+                            <span class="underline menu__content--color-black">Pour bien continuer</span>
+
+                            <svg class="line-menu-3" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="349.479px"
+                                height="20.312px" viewBox="0 0 349.479 20.312"
+                                style="enable-background:new 0 0 349.479 20.312;" xml:space="preserve">
+                                <path d="M346.754,3.873c0,0-2.678,13.333-21.436,13.833S2.589,17.873,2.589,17.873s1.843-1.058,3.517-6.946
+	                    l315.359-0.721C321.465,10.207,333.859,11.54,346.754,3.873z" />
+                            </svg>
+                        </h4>
+                    </div>
+
+                    <p>
+                        <span>Poulet rôti aux herbes de provence et sa crème de truffe</span>
+                        <span class="price">110€</span>
+                    </p>
+                    <p>
+                        <span>Langouste rôtie et ses légumes de saison</span>
+                        <span class="price">225€</span>
+                    </p>
+                    <p>
+                        <span>Côte de boeuf angus et sa purée de panais</span>
+                        <span class="price">115€</span>
+                    </p>
+
+                    <div class="menu__content--color-light-blue">
+                        <h4>
+                            <svg class="line-menu-3" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="346px" height="18px"
+                                viewBox="0 0 346 18" style="enable-background:new 0 0 346 18;" xml:space="preserve">
+                                <path d="M2,2.311c0,0,2.666,13.333,21.333,13.833S344.5,16.311,344.5,16.311s-1.834-1.058-3.5-6.946
+	                    L27.166,8.644C27.166,8.644,14.833,9.977,2,2.311z" />
+                            </svg>
+
+                            <span class="underline menu__content--color-black">Pour bien terminer</span>
+
+                            <svg class="line-menu-3" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="349.479px"
+                                height="20.312px" viewBox="0 0 349.479 20.312"
+                                style="enable-background:new 0 0 349.479 20.312;" xml:space="preserve">
+                                <path d="M346.754,3.873c0,0-2.678,13.333-21.436,13.833S2.589,17.873,2.589,17.873s1.843-1.058,3.517-6.946
+	                    l315.359-0.721C321.465,10.207,333.859,11.54,346.754,3.873z" />
+                            </svg>
+                        </h4>
+                    </div>
+                    <p>
+                        <span>Farandole de desserts du chef</span>
+                        <span class="price">55€</span>
+                    </p>
+                    <p>
+                        <span>Crème brulée revisitée</span>
+                        <span class="price">60€</span>
+                    </p>
+                    <p>
+                        <span>Tiramisu à la noisette</span>
+                        <span class="price">55€</span>
+                    </p>
+                </div>
+
+                <div class="menu__footer">
+                </div>
+            </div>
+        </main>
+
+        <div class="return-btn">
+            <div class="btn">
+                <a href="../index.html">Accueil</a>
+            </div>
         </div>
     </div>
 
     <footer>
-        <a href="./mentions_legales.html" class="legal-notice">
+        <a href="./mentions_legales.html">
             Mentions légales
         </a>
 
-        <a href="mailto:marieparet.33@gmail.com" class="contact-us">
+        <a href="mailto:marieparet.33@gmail.com">
             Contactez-nous
         </a>
     </footer>
