--- a/pages/mentions_legales.html
+++ b/pages/mentions_legales.html
@@ -74,11 +74,11 @@
     </div>
 
     <footer>
-        <a href="./mentions_legales.html" class="legal-notice">
+        <a href="./mentions_legales.html">
             Mentions légales
         </a>
 
-        <a href="mailto:marieparet.33@gmail.com" class="contact-us">
+        <a href="mailto:marieparet.33@gmail.com">
             Contactez-nous
         </a>
     </footer>
