--- a/pages/la_note_enchantee.html
+++ b/pages/la_note_enchantee.html
@@ -21,92 +21,94 @@
     </a>
   </header>
 
-  <div class="menu__header">
-    <h1>La note enchantée</h1>
-  </div>
-
-  <main class="menu--main">
-    <div class="menu__container menu--la-note-enchantee">
-      <div class="menu__top">
-        <img class="icon-music" src="../assets/image/music.svg" alt="music note" />
-        <h2>La note enchantée</h2>
-      </div>
-
-      <div class="menu__content menu__content--color-black">
-        <h3>
-          <img class="line-menu-1" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
-          <span class="underline">Prélude</span>
-          <img class="line-menu-1" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
-        </h3>
-        <p>
-          <span>Ravioles de foie gras accompagnés de leur crème à la truffe</span>
-          <span class="price">98€</span>
-        </p>
-        <p>
-          <span>Caviar osciètre sur blini à la farine de blé noir</span>
-          <span class="price">115€</span>
-        </p>
-        <p>
-          <span>Homard et espuma de potiron mariné aux zests d'orange</span>
-          <span class="price">89€</span>
-        </p>
-        <p>
-          <span>Foie gras de canard cuit entier, confiture de figue et pain
-            toasté</span><span class="price">105€</span>
-        </p>
-
-        <h3>
-          <img class="line-menu-1" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
-          <span class="underline">Point d'orgue</span>
-          <img class="line-menu-1" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
-        </h3>
-        <p>
-          <span>Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave </span>
-          <span class="price">102€</span>
-        </p>
-        <p>
-          <span>Langoustine poêlée, purée de patate douce</span>
-          <span class="price">205€</span>
-        </p>
-        <p>
-          <span>Mijoté de queue de boeuf et riz sauvage aux zests de citron</span>
-          <span class="price">169€</span>
-        </p>
-
-        <h3>
-          <img class="line-menu-1" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
-          <span class="underline">Mouvement final</span>
-          <img class="line-menu-1" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
-        </h3>
-        <p>
-          <span>
-            Macaron noisette et chocolat, glace au caramel brun et sel de
-            Guérande
-          </span>
-        </p>
-        <p><span>Baba au rhum revisité avec son coulis de citron</span></p>
-        <p><span>Tarte au citron meringuée destructurée</span></p>
-      </div>
-
-      <div class="menu--la-note-enchantee__bottom">
-        <img class="icon-music" src="../assets/image/music.svg" alt="music note" />
-        <p>La note enchantée</p>
-      </div>
+  <div class="bloc-page">
+    <div class="menu__header">
+      <h2>La note enchantée</h2>
     </div>
-  </main>
 
-  <div class="return-btn">
-    <div class="btn">
-      <a href="../index.html">Accueil</a>
+    <main class="menu--main">
+      <div class="menu__container menu--la-note-enchantee">
+        <div class="menu__top">
+          <img class="icon-music" src="../assets/image/music.svg" alt="music note" />
+          <h3>La note enchantée</h3>
+        </div>
+
+        <div class="menu__content menu__content--color-black">
+          <h4>
+            <img class="line-menu-1" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
+            <span class="underline">Prélude</span>
+            <img class="line-menu-1" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
+          </h4>
+          <p>
+            <span>Ravioles de foie gras accompagnés de leur crème à la truffe</span>
+            <span class="price">98€</span>
+          </p>
+          <p>
+            <span>Caviar osciètre sur blini à la farine de blé noir</span>
+            <span class="price">115€</span>
+          </p>
+          <p>
+            <span>Homard et espuma de potiron mariné aux zests d'orange</span>
+            <span class="price">89€</span>
+          </p>
+          <p>
+            <span>Foie gras de canard cuit entier, confiture de figue et pain
+              toasté</span><span class="price">105€</span>
+          </p>
+
+          <h4>
+            <img class="line-menu-1" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
+            <span class="underline">Point d'orgue</span>
+            <img class="line-menu-1" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
+          </h4>
+          <p>
+            <span>Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave </span>
+            <span class="price">102€</span>
+          </p>
+          <p>
+            <span>Langoustine poêlée, purée de patate douce</span>
+            <span class="price">205€</span>
+          </p>
+          <p>
+            <span>Mijoté de queue de boeuf et riz sauvage aux zests de citron</span>
+            <span class="price">169€</span>
+          </p>
+
+          <h4>
+            <img class="line-menu-1" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
+            <span class="underline">Mouvement final</span>
+            <img class="line-menu-1" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
+          </h4>
+          <p>
+            <span>
+              Macaron noisette et chocolat, glace au caramel brun et sel de
+              Guérande
+            </span>
+          </p>
+          <p><span>Baba au rhum revisité avec son coulis de citron</span></p>
+          <p><span>Tarte au citron meringuée destructurée</span></p>
+        </div>
+
+        <div class="menu--la-note-enchantee__bottom">
+          <img class="icon-music" src="../assets/image/music.svg" alt="music note" />
+          <p>La note enchantée</p>
+        </div>
+      </div>
+    </main>
+
+    <div class="return-btn">
+      <div class="btn">
+        <a href="../index.html">Accueil</a>
+      </div>
     </div>
   </div>
 
   <footer>
-    <a href="./mentions_legales.html" class="legal-notice">
+    <a href="./mentions_legales.html">
       Mentions légales
     </a>
 
-    <a href="mailto:marieparet.33@gmail.com" class="contact-us">
+    <a href="mailto:marieparet.33@gmail.com">
       Contactez-nous
     </a>
   </footer>
