--- a/pages/le_chic_a_la_francaise.html
+++ b/pages/le_chic_a_la_francaise.html
@@ -21,127 +21,135 @@
         </a>
     </header>
 
-    <div class="menu__header">
-        <h1>Le chic à la française</h1>
-    </div>
-
-    <main class="menu--main">
-        <div class="menu__container menu--le-chic-a-la-francaise">
-            <div class="menu__top">
-                <h2>Le chic à la française</h2>
-            </div>
-
-            <div class="menu__content">
-
-                <div class="menu__content--color-orange">
-                    <h3>
-                        <svg class="line-menu-2" version="1.1" xmlns="http://www.w3.org/2000/svg"
-                            xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="331.703px" height="19px"
-                            viewBox="0 0 331.703 19" style="enable-background:new 0 0 331.703 19;" xml:space="preserve">
-                            <path d="M331.703,8.475c0,0-30,0-43-7.333c0,0-161.332,8.667-285.332,7.333c0,0,250.713,3.667,285.379,9
-                            C288.75,17.475,305.703,9.475,331.703,8.475z" />
-                        </svg>
-
-                        <span class="underline">Pour se mettre en appétit</span>
-
-                        <svg class="line-menu-2" version="1.1" xmlns="http://www.w3.org/2000/svg"
-                            xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="331.703px" height="19px"
-                            viewBox="0 0 331.703 19" style="enable-background:new 0 0 331.703 19;" xml:space="preserve">
-                            <path d="M331.703,8.475c0,0-30,0-43-7.333c0,0-161.332,8.667-285.332,7.333c0,0,250.713,3.667,285.379,9
-                            C288.75,17.475,305.703,9.475,331.703,8.475z" />
-                        </svg>
-
-                    </h3>
-                    <p>
-                        <span>Tartare de poulpe acidulé aux zests d'orange</span>
-                        <span class="price">79€</span>
-                    </p>
-                    <p>
-                        <span>Velouté de légumes d'antan</span>
-                        <span class="price">57€</span>
-                    </p>
-                    <p>
-                        <span>Soupe à l'oignon revisitée</span>
-                        <span class="price">57€</span>
-                    </p>
-                </div>
-
-                <div class="menu__content--color-purple">
-                    <h3>
-                        <svg class="line-menu-2" version="1.1" xmlns="http://www.w3.org/2000/svg"
-                            xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="331.703px" height="19px"
-                            viewBox="0 0 331.703 19" style="enable-background:new 0 0 331.703 19;" xml:space="preserve">
-                            <path d="M331.703,8.475c0,0-30,0-43-7.333c0,0-161.332,8.667-285.332,7.333c0,0,250.713,3.667,285.379,9
-                            C288.75,17.475,305.703,9.475,331.703,8.475z" />
-                        </svg>
-
-                        <span class="underline">Plaisir des papilles</span>
-
-                        <svg class="line-menu-2" version="1.1" xmlns="http://www.w3.org/2000/svg"
-                            xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="331.703px" height="19px"
-                            viewBox="0 0 331.703 19" style="enable-background:new 0 0 331.703 19;" xml:space="preserve">
-                            <path d="M331.703,8.475c0,0-30,0-43-7.333c0,0-161.332,8.667-285.332,7.333c0,0,250.713,3.667,285.379,9
-                            C288.75,17.475,305.703,9.475,331.703,8.475z" />
-                        </svg>
-                        </span>
-                    </h3>
-                    <p>
-                        <span>Coquilles Saint-Jacques accompangées d'une purée de panais</span>
-                        <span class="price">95€</span>
-                    </p>
-                    <p>
-                        <span>Magret de canard et parmentier de pommes de terres</span>
-                        <span class="price">88€</span>
-                    </p>
-                    <p>
-                        <span>Pigeonneau d'Ille et Vilaine sur son lit de gnocchis aux légumes</span>
-                        <span class="price">175€</span>
-                    </p>
-                </div>
-
-                <div class="menu__content--color-blue">
-                    <h3>
-                        <svg class="line-menu-2" version="1.1" xmlns="http://www.w3.org/2000/svg"
-                            xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="331.703px" height="19px"
-                            viewBox="0 0 331.703 19" style="enable-background:new 0 0 331.703 19;" xml:space="preserve">
-                            <path d="M331.703,8.475c0,0-30,0-43-7.333c0,0-161.332,8.667-285.332,7.333c0,0,250.713,3.667,285.379,9
-                            C288.75,17.475,305.703,9.475,331.703,8.475z" />
-                        </svg>
-
-                        <span class="underline">Gourmandises sucrées</span>
-
-                        <svg class="line-menu-2" version="1.1" xmlns="http://www.w3.org/2000/svg"
-                            xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="331.703px" height="19px"
-                            viewBox="0 0 331.703 19" style="enable-background:new 0 0 331.703 19;" xml:space="preserve">
-                            <path d="M331.703,8.475c0,0-30,0-43-7.333c0,0-161.332,8.667-285.332,7.333c0,0,250.713,3.667,285.379,9
-                            C288.75,17.475,305.703,9.475,331.703,8.475z" />
-                        </svg>
-
-                    </h3>
-                    <p><span>Pétales de violettes glacés et purée de noisettes</span></p>
-                    <p><span>Fondant au chocolat revisité</span></p>
-                    <p><span>Millefeuille croustillant</span></p>
-                </div>
-            </div>
-
-            <div class="menu__footer">
-            </div>
-
+    <div class="bloc-page">
+        <div class="menu__header">
+            <h2>Le chic à la française</h2>
         </div>
-    </main>
 
-    <div class="return-btn">
-        <div class="btn">
-            <a href="../index.html">Accueil</a>
+        <main class="menu--main">
+            <div class="menu__container menu--le-chic-a-la-francaise">
+                <div class="menu__top">
+                    <h3>Le chic à la française</h3>
+                </div>
+
+                <div class="menu__content">
+
+                    <div class="menu__content--color-orange">
+                        <h4>
+                            <svg class="line-menu-2" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="331.703px"
+                                height="19px" viewBox="0 0 331.703 19" style="enable-background:new 0 0 331.703 19;"
+                                xml:space="preserve">
+                                <path d="M331.703,8.475c0,0-30,0-43-7.333c0,0-161.332,8.667-285.332,7.333c0,0,250.713,3.667,285.379,9
+                            C288.75,17.475,305.703,9.475,331.703,8.475z" />
+                            </svg>
+
+                            <span class="underline">Pour se mettre en appétit</span>
+
+                            <svg class="line-menu-2" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="331.703px"
+                                height="19px" viewBox="0 0 331.703 19" style="enable-background:new 0 0 331.703 19;"
+                                xml:space="preserve">
+                                <path d="M331.703,8.475c0,0-30,0-43-7.333c0,0-161.332,8.667-285.332,7.333c0,0,250.713,3.667,285.379,9
+                            C288.75,17.475,305.703,9.475,331.703,8.475z" />
+                            </svg>
+
+                        </h4>
+                        <p>
+                            <span>Tartare de poulpe acidulé aux zests d'orange</span>
+                            <span class="price">79€</span>
+                        </p>
+                        <p>
+                            <span>Velouté de légumes d'antan</span>
+                            <span class="price">57€</span>
+                        </p>
+                        <p>
+                            <span>Soupe à l'oignon revisitée</span>
+                            <span class="price">57€</span>
+                        </p>
+                    </div>
+
+                    <div class="menu__content--color-purple">
+                        <h4>
+                            <svg class="line-menu-2" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="331.703px"
+                                height="19px" viewBox="0 0 331.703 19" style="enable-background:new 0 0 331.703 19;"
+                                xml:space="preserve">
+                                <path d="M331.703,8.475c0,0-30,0-43-7.333c0,0-161.332,8.667-285.332,7.333c0,0,250.713,3.667,285.379,9
+                            C288.75,17.475,305.703,9.475,331.703,8.475z" />
+                            </svg>
+
+                            <span class="underline">Plaisir des papilles</span>
+
+                            <svg class="line-menu-2" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="331.703px"
+                                height="19px" viewBox="0 0 331.703 19" style="enable-background:new 0 0 331.703 19;"
+                                xml:space="preserve">
+                                <path d="M331.703,8.475c0,0-30,0-43-7.333c0,0-161.332,8.667-285.332,7.333c0,0,250.713,3.667,285.379,9
+                            C288.75,17.475,305.703,9.475,331.703,8.475z" />
+                            </svg>
+                            </span>
+                        </h4>
+                        <p>
+                            <span>Coquilles Saint-Jacques accompangées d'une purée de panais</span>
+                            <span class="price">95€</span>
+                        </p>
+                        <p>
+                            <span>Magret de canard et parmentier de pommes de terres</span>
+                            <span class="price">88€</span>
+                        </p>
+                        <p>
+                            <span>Pigeonneau d'Ille et Vilaine sur son lit de gnocchis aux légumes</span>
+                            <span class="price">175€</span>
+                        </p>
+                    </div>
+
+                    <div class="menu__content--color-blue">
+                        <h4>
+                            <svg class="line-menu-2" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="331.703px"
+                                height="19px" viewBox="0 0 331.703 19" style="enable-background:new 0 0 331.703 19;"
+                                xml:space="preserve">
+                                <path d="M331.703,8.475c0,0-30,0-43-7.333c0,0-161.332,8.667-285.332,7.333c0,0,250.713,3.667,285.379,9
+                            C288.75,17.475,305.703,9.475,331.703,8.475z" />
+                            </svg>
+
+                            <span class="underline">Gourmandises sucrées</span>
+
+                            <svg class="line-menu-2" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="331.703px"
+                                height="19px" viewBox="0 0 331.703 19" style="enable-background:new 0 0 331.703 19;"
+                                xml:space="preserve">
+                                <path d="M331.703,8.475c0,0-30,0-43-7.333c0,0-161.332,8.667-285.332,7.333c0,0,250.713,3.667,285.379,9
+                            C288.75,17.475,305.703,9.475,331.703,8.475z" />
+                            </svg>
+
+                        </h4>
+                        <p><span>Pétales de violettes glacés et purée de noisettes</span></p>
+                        <p><span>Fondant au chocolat revisité</span></p>
+                        <p><span>Millefeuille croustillant</span></p>
+                    </div>
+                </div>
+
+                <div class="menu__footer">
+                </div>
+
+            </div>
+        </main>
+
+        <div class="return-btn">
+            <div class="btn">
+                <a href="../index.html">Accueil</a>
+            </div>
         </div>
     </div>
 
     <footer>
-        <a href="./mentions_legales.html" class="legal-notice">
+        <a href="./mentions_legales.html">
             Mentions légales
         </a>
 
-        <a href="mailto:marieparet.33@gmail.com" class="contact-us">
+        <a href="mailto:marieparet.33@gmail.com">
             Contactez-nous
         </a>
     </footer>
