finalize responsive menu page

--- a/pages/la_note_enchantee.html
+++ b/pages/la_note_enchantee.html
@@ -35,9 +35,9 @@
 
         <div class="menu__content menu__content--color-black">
           <h4>
-            <img class="line-menu-1" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
+            <img class="line-menu" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
             <span class="underline">Prélude</span>
-            <img class="line-menu-1" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
+            <img class="line-menu" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
           </h4>
 
           <p>
@@ -58,9 +58,9 @@
           </p>
 
           <h4>
-            <img class="line-menu-1" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
+            <img class="line-menu" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
             <span class="underline">Point d'orgue</span>
-            <img class="line-menu-1" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
+            <img class="line-menu" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
           </h4>
 
           <p>
@@ -77,9 +77,9 @@
           </p>
 
           <h4>
-            <img class="line-menu-1" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
+            <img class="line-menu" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
             <span class="underline">Mouvement final</span>
-            <img class="line-menu-1" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
+            <img class="line-menu" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
           </h4>
 
           <p>
