--- a/pages/la_palette_du_gout.html
+++ b/pages/la_palette_du_gout.html
@@ -36,9 +36,9 @@
 
           <div class="menu__content--color-green">
             <h4>
-              <img class="line-menu-1" src="../assets/image/line_menu_4.svg" alt="ligne menu" />
+              <img class="line-menu" src="../assets/image/line_menu_4.svg" alt="ligne menu" />
               <span class="underline menu__content--color-black">Esquisse</span>
-              <img class="line-menu-1" src="../assets/image/line_menu_4.svg" alt="ligne menu" />
+              <img class="line-menu" src="../assets/image/line_menu_4.svg" alt="ligne menu" />
             </h4>
           </div>
 
@@ -57,9 +57,9 @@
 
           <div class="menu__content--color-green">
             <h4>
-              <img class="line-menu-1" src="../assets/image/line_menu_4.svg" alt="ligne menu" />
+              <img class="line-menu" src="../assets/image/line_menu_4.svg" alt="ligne menu" />
               <span class="underline menu__content--color-black">Oeuvre de maître</span>
-              <img class="line-menu-1" src="../assets/image/line_menu_4.svg" alt="ligne menu" />
+              <img class="line-menu" src="../assets/image/line_menu_4.svg" alt="ligne menu" />
             </h4>
           </div>
 
@@ -78,9 +78,9 @@
 
           <div class="menu__content--color-green">
             <h4>
-              <img class="line-menu-1" src="../assets/image/line_menu_4.svg" alt="ligne menu" />
+              <img class="line-menu" src="../assets/image/line_menu_4.svg" alt="ligne menu" />
               <span class="underline menu__content--color-black">Au sommet de l'art</span>
-              <img class="line-menu-1" src="../assets/image/line_menu_4.svg" alt="ligne menu" />
+              <img class="line-menu" src="../assets/image/line_menu_4.svg" alt="ligne menu" />
             </h4>
           </div>
 
